src/test/ui/dyn-star/check-size-at-cast.stderr
error[E0277]: `[i32; 4]` needs to be a pointer-sized type
  --> $DIR/check-size-at-cast.rs:7:13
   |
LL |     let i = [1, 2, 3, 4] as dyn* Debug;
   |             ^^^^^^^^^^^^ `[i32; 4]` needs to be a pointer-sized type
   |
   = help: the trait `PointerSized` is not implemented for `[i32; 4]`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
